{
    "version": 1,
    "name": "ProjectInputActions",
    "maps": [
        {
            "name": "Motion",
            "id": "b97291c8-0fc3-4975-9542-46fda5920ecf",
            "actions": [
                {
                    "name": "Side Move",
                    "type": "Value",
                    "id": "b290bc5b-c186-4d28-86fb-09d0290242fe",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f08510f3-99a6-470c-8745-c4459f917834",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "788c80c1-5f5c-43e2-afc1-62c9f3aa04e5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "081fb200-d316-4893-9d62-fc6e20b57045",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bd23e805-34ec-43f6-8bbe-a390fbfc4010",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bf66c95a-5485-4d5f-8160-988e9110bd4f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5cef8447-47a9-457a-a779-5b461341b36c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Interactions",
            "id": "ada501d2-404d-430d-957b-78fc9cc6301b",
            "actions": [
                {
                    "name": "ObjectInteraction",
                    "type": "Button",
                    "id": "b071cb2d-6f28-4fa4-bff8-ee917a72373f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "810f69d1-19a3-4d70-879b-238cba3c16bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReadLetter",
                    "type": "Button",
                    "id": "bda16612-1d3d-460d-b535-de768a37e004",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c7f7023-4dfc-4f85-aac6-9501ad2824c8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ObjectInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3ee448c-fb2b-48de-a165-a541c80698c7",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ObjectInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4789eaba-7785-430b-bb3c-6823539fd05f",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17150ea7-8753-465a-93ed-4b5ecbb72042",
                    "path": "<Keyboard>/tab",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14d42b8e-6f0d-47b0-8b8d-4d0730447a27",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ReadLetter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cbf8601-89e4-4462-a4a7-5f4f0453db24",
                    "path": "<Keyboard>/q",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ReadLetter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}